<resources>
    <string name="app_name">B&amp;P</string>
    <string name="hint_name"> Name</string>
    <string name="hint_email"> Email</string>
    <string name="hint_password"> Password </string>
    <string name="hint_confirm_password"> Confirm Password </string>
    <string name="text_login">Login</string>
    <string name="text_register"> Register</string>
    <string name="error_message_name"> Enter Full Name</string>
    <string name="error_message_email"> Enter Valid Email</string>
    <string name="error_message_age"> Enter Age </string>
    <string name="error_message_password"> Enter Password </string>
    <string name="success_message"> Registration Successful</string>
    <string name="text_not_member"> No account yet? Create One</string>
    <string name="text_already_member"> Already a member? Login</string>
    <string name="error_email_exists"> Email already exists </string>
    <string name="error_password_match"> Password does not match </string>
    <string name="error_valid_email_password"> Wrong Email or Password</string>
    <string name="text_age"> Age </string>
    <string name="text_weight"> Weight(Kg)</string>
    <string name="text_height">Height(Cm)</string>
    <string name="view_steps"> Steps</string>
    <string name="view_today"> View Today\'s Steps</string>
    <string name="view_calories"> Calories </string>
    <string name="view_glucose"> Glucose </string>
    <string name="log_glucose"> Log </string>
    <string name="hint_glucoseLevel">Glucose Level</string>
    <string name="set_time"> Set Time</string>
    <string name="set_date"> Set Date</string>
    <string name="log_medication"> Medication</string>
    <string name="hint_dosage">Dosage</string>
    <string name="week_calories">Calories</string>
    <string name="diabetes_help">Diabetes Help</string>
    <string name="step_tab">Steps</string>
    <string name="calorie_tab">Calories</string>
    // New additions made from here
    <string name="risk_test"> Take a Risk Test</string>
    <string name="male">Male</string>
    <string name="female"> Female</string>
    <string name="genderq"> Select your Gender</string>
    <string name="ageq">Select your age group</string>
    <string name="y49">49 or younger</string>
    <string name="y59">50-59</string>
    <string name="y69">60-69</string>
    <string name="y70">70 or older</string>
    <string name="ethnicq"> What is your ethnic background?</string>
    <string name="e_sa">South Asian</string>
    <string name="e_bla">Black</string>
    <string name="e_chinese"> Chinese</string>
    <string name="e_mix"> Mixed ethnicity</string>
    <string name="e_white"> White</string>
    <string name="e_none"> None of these</string>
    <string name="historyq">Do you have a parent,direct relative and or own child with diabetes?</string>
    <string name="yes">Yes</string>
    <string name="no"> No </string>
    <string name="waistq">What is your waist measurement?</string>
    <string name="winches">inches</string>
    <string name="heightq">How tall are you?</string>
    <string name="weightq">How much do you weigh?</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="bloodpressureq">Has a doctor ever told that you have high blood pressure?</string>
    <string name="waist90">Less than 90cm(35.5in)</string>
    <string name="waist99">90 - 99.9cm(35.5 - 39.3in)</string>
    <string name="waist109">100 - 109.9cm(39.4 - 43.3in)</string>
    <string name="waist110">110cm(43.4in) or above</string>
    <string name="weighthint">Weight in kg</string>
    <string name="heighthint">Height in cm</string>
    <string name="submitq">Check</string>
    <string name="risk_indicatorlow"> Your risk is <b>Low </b> </string>
    <string name="risk_indicatorincreased"> Your risk is <b>Increased</b> </string>
    <string name="risk_indicatormoderate"> Your risk is <b>Moderate</b></string>
    <string name="risk_indicatorhigh"> Your risk is <b>High</b></string>
    <string name="score_indicator"> Your answers add up to </string>
    <string name="info_lowrisk"> 1 in 20 people with your risk will get Type 2 diabetes in the next 10 years </string>
    <string name="info_increasedrisk"> 1 in 10 people with your risk will get Type 2 diabetes in the next 10 years</string>
    <string name="info_moderaterisk"> 1 in 7 people with your risk will get Type 2 diabetes in the next 10 years</string>
    <string name="info_highrisk"> 1 in 3 people with your risk will get Type 2 diabetes in the next 10 years</string>
    <string name="help_low"> You are low at risk! But do exercise!</string>
    <string name="help_high">Your health is at risk. Visit a doctor immediately!</string>
    <string name="help_moderate">Your health is at risk!</string>
    <string name="help_increased"> Make small changes in lifestyle to make a big difference!</string>

    <!-- New June 15 -->
    <string name="avgcalories">Average</string>
    <string name="todaycalories"> Today</string>

    <!-- spinner -->

    <string-array name="meal_array">
        <item>Before Breakfast</item>
        <item>After Breakfast</item>
        <item>Before Lunch</item>
        <item>After Lunch</item>
        <item>Before Dinner</item>
        <item>After Dinner</item>
        <item>After Exercise</item>
    </string-array>

    <string-array name="medic_array">
        <item> Acarbose </item>
        <item> Miglitol</item>
        <item> Kazano </item>
        <item> Invokamet</item>
        <item> Xigduo XR</item>
        <item> Synjardy</item>
        <item> Glucovance</item>
        <item> Jentadueto</item>
        <item> Actoplus</item>
        <item> PrandiMet</item>
        <item> Avandamet</item>
        <item> Kombiglyze</item>
        <item> Janumet </item>
        <item> Nesina</item>
        <item> Oseni</item>
        <item> Tradjenta</item>
        <item> Glyxambi</item>
        <item> Onglyza</item>
        <item> Januvia</item>
        <item> Juvisync</item>
        <item> Tanzeum</item>
        <item> Trulicity</item>
        <item> Byetta</item>
        <item> Bydureon</item>
        <item> Victoza</item>
        <item> Starlix</item>
        <item> Prandin</item>
        <item> Farxiga</item>
        <item> Invokana </item>
        <item> Jardiance</item>
        <item> Amaryl</item>
        <item> Duetact</item>
        <item> Avandaryl</item>
        <item> Glucotrol</item>
        <item> Metaglip</item>
        <item> Tolinase</item>
        <item> Orinase</item>
        <item> Tol-Tab</item>
        <item> Avandia</item>
        <item> Actos</item>
        <item> Actoplus Met XR</item>

    </string-array>

    <string-array name="unit_array">
        <item> mg</item>
        <item> mL</item>
        <item> tablet</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
